Created  a Readme file

--- a/Readme
+++ b/Readme
@@ -5,7 +5,7 @@
 This project is an online education platform designed to make learning accessible and flexible for both students and educators. The platform allows **teachers** to upload, manage, and organize video-based courses, while **students** can engage by liking and commenting on the content. The website is fully responsive and works seamlessly on all devices, making it convenient to access from desktops, tablets, and mobile phones.
 
 [**View Live**](#)  
-(_Soon we will upload_)
+(_We will be uploading soon_)
 
 ## Features
 
